--- a/css/style_final.css
+++ b/css/style_final.css
@@ -739,6 +739,30 @@ section.six .diapo.diapo_7 .sello3.animated {
     height: auto;
 }
 
+section.six .diapo.diapo_8 .sello1.animated {
+    top: 50%;
+    left: 50%;
+    margin-top: -270px;
+    margin-left: -370px;
+    z-index: 3;
+}
+
+section.six .diapo.diapo_8 .sello2.animated {
+    top: 50%;
+    right: 50%;
+    margin-top: -120px;
+    margin-right: -150px;
+    z-index: 2;
+}
+
+section.six .diapo.diapo_8 .sello3.animated {
+    top: 50%;
+    right: 50%;
+    margin-top: 42px;
+    margin-right: -340px;
+    z-index: 1;
+}
+
 
 
 
