--- a/css/style_final.css
+++ b/css/style_final.css
@@ -1019,7 +1019,7 @@ section.nine .diapo.diapo_1 .sello4.animated{
     text-decoration: none;
 }
 
-.scrollNavigation li a span {
+.scrollNavigation li a span.scrollNavigation_bull {
     border-radius: 50%;
     position: absolute;
     z-index: 1;
@@ -1036,10 +1036,26 @@ section.nine .diapo.diapo_1 .sello4.animated{
     background-color: #FFFFFF;
 }
 
-.scrollNavigation li a:hover span,
-.scrollNavigation li.active a span{
+.scrollNavigation li a span.scrollNavigation_tooltip {
+    position: absolute;
+    top: -2px;
+    right: 30px;
+    font-size: 12px;
+    color: #FFFFFF;
+    text-transform: capitalize;
+    opacity: 0;
+    transition: .5s;
+}
+
+.scrollNavigation li a:hover span.scrollNavigation_bull,
+.scrollNavigation li.active a span.scrollNavigation_bull {
     height: 12px;
     width: 12px;
     margin: -6px 0 0 -6px;
     border-radius: 100%;
+}
+
+.scrollNavigation li a:hover span.scrollNavigation_tooltip {
+    opacity: 1;
+    transition: .5s;
 }
