--- a/css/style_portada.css
+++ b/css/style_portada.css
@@ -88,4 +88,18 @@ body, html{
     width: 100%;
 }
 
+
+
+.sello_mobile{height: 100%;}
+    
+    .sello_mobile img{
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      -webkit-transform: translate(-50%, -50%);
+      width: 100%;
+    }
+
+
 /* Portadad CSS fin*/
