Añadir nueva diapo en la sección 2. Corregir errores de contenido. Corregir tamaños de imágenes y sellos que no aparecian.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -22,7 +22,9 @@
 
     a:focus, a:hover{text-decoration: none;}
   
-
+    .block{
+      display: block;
+    }
     .sinbr br {
       display: none;
     }
