--- a/css/style_final.css
+++ b/css/style_final.css
@@ -1,4 +1,3 @@
-
 body, html {
     overflow: hidden;
 }
@@ -46,11 +45,9 @@ section {
 }
 
 /*
-
 .invisible {
     opacity: 0;
 }
-
 #fullpage {
     height: 100%;
     position: relative;
@@ -58,10 +55,7 @@ section {
     transition: all 700ms ease;
     transform: translate3d(0px, 0px, 0px);
 }
-
-
 /*
-
 /* ****************************************************************************************************************** */
 /* ********** Section 1 - ANIMATIONS ******************************************************************************** */
 
@@ -336,8 +330,9 @@ section.third .diapo.diapo_1 .image_mariscal.no-animated {
 section.third .diapo.diapo_1 .image_mariscal.animated {
     position: absolute;
     top: 0px;
-    left: 0px;
+    left: 10%;
     opacity: 1;
+    width: 30%;
 }
 
 section.third .diapo.diapo_1 .image_cobiCirculo.no-animated {
@@ -351,9 +346,11 @@ section.third .diapo.diapo_1 .image_cobiCirculo.no-animated {
 section.third .diapo.diapo_1 .image_cobiCirculo.animated {
     position: absolute;
     top: 0px;
-    left: 61%;
-    transform: translateX(-61%);
+    left: 0;
+    right: 0;
     opacity: 1;
+    width: 30%;
+    margin: 0 auto;
 }
 
 section.third .diapo.diapo_1 .image_cobiSello.no-animated {
@@ -365,9 +362,10 @@ section.third .diapo.diapo_1 .image_cobiSello.no-animated {
 
 section.third .diapo.diapo_1 .image_cobiSello.animated {
     position: absolute;
-    top: 0px;
-    right: -6%;
+    top: -20px;
+    right: 12%;
     opacity: 1;
+    width: 30%;
 }
 
 
