Modificar todos los sellos en mobile para que aparezcan en vertical y con tamaño máximo.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,7 +8,7 @@
 
     h1{
       font-size: 36px;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
       padding-bottom: 0px;
     }
 
@@ -18,6 +18,10 @@
 
     img{
       max-width: 100%;
+    }
+
+    .right{
+      float: none !important;
     }
 
     a:focus, a:hover{text-decoration: none;}
@@ -41,7 +45,7 @@
     }
 
     .imgmw320 {
-      max-width: 275px;
+      max-width: 275px !important;
     }
 
     .fondo6{
@@ -193,7 +197,23 @@
       transform: inherit;
     }
 
+    section.third .diapo.diapo_1 .image_mariscal.no-animated{
+      width: 100%;
+      transform: rotate(-9deg) !important;
+    }
 
+    section.third .diapo.diapo_1 .image_cobiCirculo.no-animated{
+      width: 100%;
+    }
+
+    section.third .diapo.diapo_1 .image_cobiSello.no-animated{
+      width: 100%;
+      transform: rotate(20deg) !important;
+    }
+
+    .six .diapo_2 img{
+      width: inherit;
+    }
 
     .third .diapo_1 h1{
       width: 60%;
@@ -223,10 +243,11 @@
     }
 
     section.second .diapo.diapo_3 .buzon2.no-animated {
-      opacity: 1;
+      /*opacity: 1;
       width: 128px;
       height: auto;
-      margin-left: 36%;
+      margin-left: 36%;*/
+      display: none;
     }
     section.second .diapo.diapo_3 .sobre2.no-animated{
       display: none;
@@ -239,6 +260,7 @@
       opacity: 1;
     }
 
+    
 
     section.fourth .diapo.diapo_1 .part2 .text-left,
     section.first .diapo.diapo_2 .claim.no-animated,
