Actualización de textos y solución de z-index en algunas imágenes.

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ p{
   overflow: hidden;
 }
 
+.z999{
+  z-index: 999;
+}
+
 /*Portada CSS*/
 
 #portada {
@@ -580,7 +584,9 @@ p{
 	background: white;
 }
 
-
+#firstsection .diapo_1 h1 {
+    visibility: hidden;
+}
 
 /* Botonera Funcionalidades */
 
